# export-fimfiction

./: .gitmodules  CMakeLists.txt  Makefile  README.md  dub.json  html_when  main.mk  setup.sh
source/: app.d  declassifier.d  gui.c  wordcount.d
src/: dawg.c  dawgstuff.dia  gui.c  gui.h  main.c  mystring.h  wordcount.c  wordcount.h
